# google-maps-scraper

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: CLAUDE.md  settings.py
scripts/: CLAUDE.md  main.py
src/: CLAUDE.md
src/enrichment/: CLAUDE.md  email_finder.py  phone_normalizer.py
src/scraper/: CLAUDE.md  browser.py  extractor.py  maps_scraper.py
src/storage/: CLAUDE.md  csv_exporter.py  models.py  repository.py
src/utils/: CLAUDE.md  logger.py  proxy_manager.py  rate_limiter.py
tests/: CLAUDE.md  conftest.py  test_extractor.py  test_phone_normalizer.py  test_repository.py
